# xbtOS-Misaka-

./: CMakeLists.txt  README.md
boot/: boot.asm
boot/uefi/: README.md  bootx64.c
hal/: console.cpp  console.h  hal.cpp  hal.h  interrupt.S  ports.h
kernel/: main.cpp
kernel/app/: app.cpp  app.h  third_party.h
kernel/fs/: vfs.cpp  vfs.h
kernel/hal/: hal.cpp  hal.h
kernel/i18n/: i18n.cpp  i18n.h
kernel/include/: ctype.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
kernel/memory/: libc.cpp  stdlib.cpp
scripts/: build_iso_zh.ps1  install_zh.ps1
